<resources>
    <string name="app_name">Yelp</string>
    <string name="business_search">Business Search</string>
    <string name="keyword">KeyWord</string>
    <string name="distance">Distance</string>
    <string name="category">category</string>
    <string name="Default">Default</string>
    <string name="auto_detect_my_location">Auto-detect my location</string>
    <string name="results">Results</string>
    <string name="submit">SUBMIT</string>
    <string name="clear">CLEAR</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n_a">N/A</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="link">
         <u>Business Link</u>.
    </string>
</resources>