<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/mytoolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:elevation="5dp"/>-->

<!--  <include-->
<!--    android:id="@+id/toolbar"-->
<!--      layout="@layout/toolbar"/>-->


    <TextView
        android:id="@+id/heading"
        android:layout_width="331dp"
        android:layout_height="35dp"
        android:text="@string/business_search"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <AutoCompleteTextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:autofillHints=""
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ems="10"
        android:hint="@string/keyword"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:textColorLink="#21181a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:ems="10"
        android:hint="@string/distance"
        android:inputType="textPersonName"
        android:textColor="#21181a"
        android:textColorHint="#757575"
        android:textColorLink="#21181a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:text="@string/category"
        android:textColor="#AB47BC"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="165dp"
        android:layout_height="37dp"
        android:contentDescription="@string/Default"
        android:text="@string/business_search"
        android:textColor="#050505"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="259dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/location"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        android:textColorLink="#21181a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="229dp"
        android:layout_height="37dp"
        android:text="@string/auto_detect_my_location"
        android:textColorHighlight="#AB47BC"
        android:textColorLink="#AB47BC"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/result"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:text="@string/results"
        android:textColor="#050505"
        android:textSize="24sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="418dp"

        android:layout_height="201dp"
        android:layout_marginTop="376dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heading"
        app:layout_constraintVertical_bias="0.82" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="252dp"
        android:layout_height="148dp"
        android:text="AutoCompleteTextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

</androidx.constraintlayout.widget.ConstraintLayout>