<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessDetailsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="230dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="168dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Price Range"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="N/A"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="168dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="@string/n_a"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="Status"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="N/A"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="N/A"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="Category"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="Visit Yelp For More"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:text="N/A"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:gravity="center"
                android:linksClickable="true"
                android:textColor="@android:color/holo_blue_light"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/reservenow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="15dp"
            android:text="RESERVE NOW" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>